Workaround to issues with IE11 and z-index. (#2170)

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/DataTypeModalView.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/DataTypeModalView.less
@@ -19,6 +19,9 @@
   &.modal-dialog {
     width: 800px;
     height: ~"calc(100% - 60px)";
+    left: 50%;
+    margin-left: -400px;
+    position: fixed;
 
     .modal-content {
       height: ~"calc(100% - 60px)";
